test/corpus/basics.txt
==================
Simple curl block
==================

curl https://example.com
h1
  a

---

(source_file
  (block
    (resource_directive
      (resource_type)
      (url))
    (query_line
      (css_selector_query))
    (query_line
      (indentation)
      (css_selector_query))))

==================
Comment
==================

// This is a comment
curl https://example.com

---

(source_file
  (comment)
  (block
    (resource_directive
      (resource_type)
      (url))))

==================
Next page selector
==================

curl https://example.com
.title
> a.morelink

---

(source_file
  (block
    (resource_directive
      (resource_type)
      (url))
    (query_line
      (css_selector_query))
    (next_page_line
      (css_selector))))

==================
Pipe operator
==================

curl https://example.com
h1 | wc -c

---

(source_file
  (block
    (resource_directive
      (resource_type)
      (url))
    (query_line
      (css_selector_query)
      (pipe_command))))
